feat: add change-side transformer for v6 ui-kit upd tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "exclude": ["transforms/__testfixtures__"],
   "compilerOptions": {
     "module": "esnext",
-    "jsx": "react"
+    "jsx": "react",
+    "noUncheckedIndexedAccess": true,
   }
 }
